Fix gauge needle alignment and rotation

--- a/public/app.css
+++ b/public/app.css
@@ -239,8 +239,9 @@ main {
 
 .gauge-needle {
     position: absolute;
-    bottom: -10px;
+    bottom: 0;
     left: 50%;
+    margin-left: -2px;
     width: 4px;
     height: 130px;
     background: #0f172a;
@@ -252,7 +253,7 @@ main {
 .gauge-needle::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     left: -8px;
     width: 20px;
     height: 20px;
